--- a/lab1/reports/lab1.Rmd
+++ b/lab1/reports/lab1.Rmd
@@ -21,32 +21,12 @@ theme_set(theme_bw())
 ```{r}
 all_series = read_csv(here("data/series_from_imdb.csv.zip"), 
                       col_types = "ccdcdcdddddddddddd") 
-
-glimpse(all_series)
 ```
 
-
-Público: Pessoas que gostam das séries especificadas e sites interessados em ranking de séries ?
- * 1 e 2 não serão todas as séries, pegar alguma lista na internet. (não exaustivo)
-
-# 1 - Quais as séries mais bem avaliadas de drama na netflix  ? 
-	Espero que seja Grey’s Anatomy.
-# 2 - Quais as séries com pior avaliação de ficção-científica na netflix ?
-	Acho que vai ser Mortal Kombat.
-# 3 - Quais séries duraram mais que uma década ?
-	Greys’s Anatomy, Friends, That 70’s show.
-# 4 - Qual a melhor e pior temporada de Grey's Anatomy ?
-	A que Cristina sai, acho que é na 10º. 
-# 5 - Qual episódio de Strangers Things tem mais notas 0 e 10 ?
-	Algum da segunda vai ter mais notas 0 e o episódio do final da primeira vai ser o com mais 10.
-# 6 - Orange is the new black melhorou ou piorou com o tempo ?
-	Piorou.
-
+# 1 - Quais das séries de drama na netflix listadas abaixo são as mais bem avaliadas ?
+Series: 13 Reasons Why, Bates Motel, Better Call Saul, Billions,  Bloodline, Breaking Bad, Grey’s Anatomy, House of Cards, How to Get Away with Murder, Mad Men
+Fonte: https://www.minhaserie.com.br/novidades/43043-17-melhores-series-de-drama-para-assistir-na-netflix
 ```{r}
-# 1 - Quais as séries mais bem avaliadas de drama na netflix  ? 
-# Series: 13 Reasons Why, Bates Motel, Better Call Saul, Billions,  Bloodline, Breaking Bad, Grey’s Anatomy, House of Cards, How to Get Away with Murder, Mad Men
-#Fonte: https://www.minhaserie.com.br/novidades/43043-17-melhores-series-de-drama-para-assistir-na-netflix
-
 drama_series <- c("13 Reasons Why", "Better Call Saul", "Billions", "A Anatomia de Grey", "House of Cards",  "Ozark", "Ray Donovan", "Suits", "The Crown", "The Good Wife")
 
 sumario = all_series %>%
@@ -68,15 +48,12 @@ all_series %>%
             size = 1.5)
 
 #TODO: pintar o minino de outra cor 
-#TODO: colocar as series na mesma sequencia
-
 ```
-
+# 2 - Quais das séries de ficção-científica na netflix listadas abaixo tem a pior avaliação ?
+Series: Black Mirror, Dark, The Expanse, Altered Carbon, Os 100, 3%, Travelers, Mars
 
 ```{r}
-# 2 - Quais as séries com pior avaliação de ficção-científica na netflix ?
 
-#Series: Black Mirror, Dark, The Expanse, Altered Carbon, Os 100, 3%, Travelers, Mars
 
 
 fiction_series <- c("Black Mirror", "Dark", "The Expanse", "Altered Carbon", "Os 100", "3%", "Travelers", "Mars")
@@ -101,10 +78,8 @@ all_series %>%
             size = 1.5)
 
 ```
-
-```{r}
 # 3 - Quais as durações médias das séries: Grey's Anatomy,  Black Mirror, Strangers Thing, Sex and The City, Avatar: A Lenda de Korra, Orange Is the New Black, House of Cards e The Good Wife ?
-
+```{r}
 my_series <- c("A Anatomia de Grey",  "Black Mirror", "Stranger Things", "Sex and the City", "Avatar: A Lenda de Korra", "Orange Is the New Black", "House of Cards", "The Good Wife")
 
 all_series %>%
@@ -112,14 +87,11 @@ all_series %>%
     group_by(series_name) %>% 
     ggplot(aes(x = season_ep, y = series_name, color = series_name)) +
     geom_line(size = 10 )
-
-# O eixo x não parece estar certo a quatindade de episodios é bem maior
     
 ```
 
-```{r}
 # 4 - Quais as melhores e piores temporadas de Grey's Anatomy ?
-
+```{r}
 sumario = all_series %>%
     filter(series_name == "A Anatomia de Grey") %>%
     group_by(season) %>%
@@ -141,11 +113,10 @@ all_series %>%
             size = 1.5)
     
 # A ordem ta bagunçada
-  
 ``` 
-```{r}
-# 5 - Qual episódio de Strangers Things tem mais notas 0 e 10 ?
 
+# 5 - Qual episódio de Strangers Things tem mais notas 0 e 10 ?
+```{r}
 all_series %>% 
     filter(series_name == "Stranger Things") %>% 
     group_by(season) %>% 
@@ -155,19 +126,17 @@ all_series %>%
     scale_x_continuous(breaks = 1:18)
 
 # verde  = r10, vermelho = r1, como colocar isso no grafico
-
 ```
 
-
-```{r}
 # 6 - Orange is the new black melhorou ou piorou com o tempo ?
 
+R: O primeiro gráfico mostra a nota de cada episódio separado por temporada. É visível que todo episódio de final de temporada tem uma nota maior que todos os episódios da temporada, ou seja, todo episódio final de temporada é amado pelo público. É difícil responder qual a melhor temporada olhando apenas para o primeiro gráfico porém a 4º temporada parece apresentar os melhores episódios, inclusive nesta está o episódio mais bem votado de toda a série. Ao plotar as notas médias de cada temporada no segundo gráfico, as hipotesés são confirmadas a 4º apresenta a melhor nota. Apesar da ultima tempora ser a pior, a serie não apresenta um decaimento gradual de acordo com as tempordas.
+```{r}
 sumario = all_series %>%
     filter(series_name == "Orange Is the New Black") %>% 
     group_by(season) %>% 
     summarise(median_series = mean(UserRating)) %>% 
     glimpse()
-
 
 all_series %>%
     filter(series_name == "Orange Is the New Black") %>% 
@@ -175,11 +144,29 @@ all_series %>%
     ggplot(aes(x = series_ep, y = UserRating, color =  season)) +
     geom_line() 
 
-
 sumario %>% 
     ggplot(aes(x = season, y = median_series, color = season)) +
     geom_point(size = 7)
-    
-
 ```
 
+# Aprofundando as questões ? e 6
+# 6 - Os episódios da melhor(4º) e pior(6º) temporada são muito diferentes em nota ? Existe uma diferença muito grande entre as duas temporadas com as melhores médias (2º e 6º) ? Será que a média foi realmente capaz de representar a 2º e 4º temporada ? 
+
+```{r}
+all_series %>%
+    filter(series_name == "Orange Is the New Black") %>% 
+    group_by(season) %>% 
+    filter(season %in% c(4,6)) %>% 
+    ggplot(aes(x = season_ep, y = UserRating, color =  season)) +
+    geom_point() 
+    
+all_series %>%
+    filter(series_name == "Orange Is the New Black") %>% 
+    group_by(season) %>% 
+    filter(season %in% c(2,4)) %>% 
+    ggplot(aes(x = season_ep, y = UserRating, color =  season)) +
+    geom_point() 
+```
+No primeiro gráfico: A 4º temporada supera em todos os episódio a 6º temporada, com exceção do 4º episódio que tem exatamente a mesma nota. Alguns episódio da 4º temporada são melhores com mais de 1 ponto de diferença. 
+
+No segunfo gráfico: Aqui pudemos observar que 5 de 13 episódio da 2º temporada são melhores que da 4º, enquanto 7 de 13 episódios da 4º são melhores que da 2º. Podemos concluir que a média foi uma representação da temporadas, apesar das mesmas apresentarem médias tão proxímas.
