--- a/vis-cultura-stackoverflow/reports/comentarios-e-cultura.Rmd
+++ b/vis-cultura-stackoverflow/reports/comentarios-e-cultura.Rmd
@@ -10,7 +10,6 @@ theme: sandstone
 library(tidyverse)
 library(here)
 library(viridis)
-source(here::here("code/lib.R"))
 theme_set(theme_bw())
 
 knitr::opts_chunk$set(tidy = FALSE,
@@ -43,12 +42,54 @@ Considerando essa variável, queremos examinar a relação entre ela e o quão h
 ## Examinando essa relação
 
 Faça uma visualização que usa os princípios de eficácia no projeto de visualizações para facilitar as comparações que você acha que são as mais importantes para entendermos esse contexto. 
+```{r}
+dados %>% 
+    ggplot(aes(x = PDI, y = comentaram_prop, color = Internet, size = usuarios) ) +
+    geom_point() +
+    facet_wrap(~ site)
+```
 
 ## Outras formas de ver
 
 Em seguida, faça 5 visualizações que usem as mesmas variáveis e também pontos, mas que sejam **menos eficazes** que a que você escolheu acima. 
 
+```{r}
+dados %>% 
+    ggplot(aes(x = usuarios, y = Internet, color = PDI, size = comentaram_prop) ) +
+    geom_point() +
+    facet_wrap(~ site)
+```
+
+```{r}
+dados %>% 
+    ggplot(aes(x = usuarios, y = Internet, color = PDI, size = comentaram_prop) ) +
+    geom_point() 
+```
+
+```{r}
+dados %>% 
+    ggplot(aes(x = PDI, y = Internet, color = usuarios, size = comentaram_prop) ) +
+    geom_point() 
+```
+
+
+```{r}
+dados %>% 
+    ggplot(aes(x = usuarios, y = Internet, color = PDI, size = comentaram_prop) ) +
+    geom_point() +
+    facet_wrap(~ site)
+```
+
+
 ## Bônus
 
 Inclua o continente dos países (`six_regions`) na visualização.
+
+```{r}
+dados %>% 
+    ggplot(aes(x = PDI, y = comentaram_prop, color = Internet, size = usuarios, shape = six_regions) ) +
+    geom_point() +
+    facet_wrap(~ site)
+```
+
 
